fix(font): use correct weights and fix legibility

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -42,7 +42,7 @@ p,
 span {
   font-family: 'Maven Pro', sans-serif;
 }
-h1,
+/* h1,
 h2,
 h3,
 p,
@@ -51,7 +51,7 @@ span {
   -webkit-font-smoothing: antialiased !important;
   -moz-font-smoothing: antialiased !important;
   text-rendering: optimizelegibility !important;
-}
+} */
 .prose,
 .prose * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
